# datalad-cds

./: .flake8  .gitattributes  .gitignore  pyproject.toml  setup.py  tox.ini
.github/workflows/: check.yml  docbuild.yml  release.yml
docs/source/: conf.py
src/datalad_cds/: __init__.py  _version.py  cdsrequest.py  download_cds.py  downloadcds.py  git_annex_backend_XGRIBNORMV1.py  git_annex_backend_XGRIBNORMV2.py
src/datalad_cds/resources/procedures/: cfg_initremote-cds
tests/: conftest.py  test_download_cds.py  test_register.py
